# verteilte-systeme-projekte

./: .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  SECURITY.md  package.json  renovate.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: branch-protection-bootstrap.yml  codeql.yml  cplusplus-compliance.yml  dependabot-auto-merge.yml  dependabot-automerge-on-success.yml  dependency-automerge-sweep.yml  dependency-review.yml  quality-gates.yml  renovate-auto-merge.yml  renovate-automerge-on-success.yml  rust-security.yml  secret-scan.yml  semantic-release.yml
cplusplus-client-server-with-database/: README.md  THIRD_PARTY_LICENSES.md
cplusplus-client-server-with-database/scripts/: check_compliance.sh
cplusplus-client-server-with-database/server/: CMakeLists.txt  Dockerfile
cplusplus-client-server-with-database/server/public/: index.html
cplusplus-client-server-with-database/server/src/: main.cpp
cplusplus-client-server-with-database/server/tests/: server_functional_test.cpp  server_static_checks.cpp
csharp-client-server-with-database/: README.md
csharp-client-server-with-database/server/: CsharpClientServerWithDatabase.csproj  Dockerfile  Program.cs
csharp-client-server-with-database/tests/: CsharpClientServerWithDatabase.Tests.csproj  (+2 more)
golang-client-server-with-database/: README.md  docker-compose.yaml
java-spring-client-server/: Dockerfile  README.md  build.gradle  docker-compose.yaml  pom.xml
java-spring-client-server-with-database/: README.md  docker-compose.yaml
java-spring-mqtt/: README.md  build.gradle  docker-compose.yaml  pom.xml
java-spring-server-client-docker/: README.md  docker-compose.yaml
node-client-server/: Dockerfile  README.md  client.js  docker-compose.yaml  package-lock.json  package.json  server.js
node-client-server-extended/: README.md  docker-compose.yaml
node-client-server-extended-with-database/: README.md  docker-compose.yaml
node-client-server-extended-with-database-nodemon/: README.md  docker-compose.yaml  package-lock.json
node-client-server-extendet/: README.md  docker-compose.yaml
node-client-server-extendet-with-database/: README.md  docker-compose.yaml
node-mqtt/: Dockerfile  README.md  docker-compose.yaml  node.js  package-lock.json  package.json
node-p2p/: Dockerfile  README.md  docker-compose.yaml  index.js  package-lock.json  package.json
node-plain-tcp/: Dockerfile  README.md  client.js  docker-compose.yaml  package-lock.json  server.js
php-client-server/: Dockerfile  README.md  docker-compose.yaml
php-client-server-with-database/: README.md  docker-compose.yaml
python-client-server-with-database/: README.md  docker-compose.yaml
rust-client-server-with-database/: README.md  docker-compose.yaml
rust-client-server-with-database/server/: Cargo.toml  Dockerfile
rust-client-server-with-database/server/.cargo/: config.toml
rust-client-server-with-database/server/public/: database.html  index.html
rust-client-server-with-database/server/src/: main.rs  test.rs
(+80 files in other folders)
