[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = {version = "0.11", features = ["cookie-session"]}
actix-files = "0.6"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.10.1"
mysql = "28"
mime = "0.3.17"
