[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.13.0"
actix-files = "0.6.10"
log = "0.4.32"
env_logger = "0.11.10"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rand = "0.10.1"
mysql = "28.0.0"
mime = "0.3.17"
# Keep Actix's cookie 0.16.x compatible with current stable Rust until cookie updates.
time = "=0.3.54"
